# Zolar

./: flash.html  platformio.ini
SLS project/: Themes.slt  Zolar2.sll  Zolar2.spj
SLS project/assets/: ui_font_fntDigital32.fcfg  ui_font_fntDigital64.c  ui_font_fntDigital64.fcfg  ui_font_fntSamsungSharpSans14.fcfg  ui_font_fntSamsungSharpSans32.fcfg  ui_font_fntSamsungSharpSans72.c  ui_font_fntSamsungSharpSans72.fcfg  ui_font_fntSamsungSharpSans96.fcfg
data/: AppSettings.json
include/: Battery.h  Button.h  Calc.h  Constants.h  Logger.h  Pinout.h  PulseCounter.h  RTC_PCF85063.h  Settings.h  Types.h  WebSettings.h
include/drivers/: Display_ST7701.h  Touch_CST820.h
include/modules/: AshCalc.h  ESPBattery.h
lib/: lv_conf.h
src/: Battery.cpp  Button.cpp  Calc.cpp  Constants.cpp  Logger.cpp  PulseCounter.cpp  Settings.cpp  WebSettings.cpp  main.cpp
src/drivers/: Display_ST7701.cpp  I2C_Driver.cpp  (+3 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_custom.cpp  ui_custom.h  ui_events.cpp  ui_events.h  ui_functions.cpp  ui_functions.h  ui_helpers.c  ui_helpers.h  ui_themes.cpp  ui_themes.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_fntDigital32.c  ui_font_fntSamsungSharpSans14.c  ui_font_fntSamsungSharpSans32.c  ui_font_fntSamsungSharpSans96.c
src/ui/images/: ui_img_battery_icons_png.c  ui_img_zolar_logo_png.c
src/ui/screens/: ui_CalibrationEdit.c  ui_CalibrationEdit.h  ui_MeasureProgress.c  ui_MeasureProgress.h  ui_Measurments.c  ui_Measurments.h  ui_Settings.c  ui_Settings.h  ui_Splash.c  ui_Splash.h  ui_StandBy.c  ui_StandBy.h
(+3 files in other folders)
